--- a/calc.css
+++ b/calc.css
@@ -5,24 +5,28 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 12em;
+  height: 15rem;
   font-family: Arial, Helvetica, sans-serif
 }
 .calcBody{
   background-color: #1C1C1C;
-  width: 22%;
+  width: 8rem;
   height: 100%;
   border-radius: 1em;
   margin: 1rem 0 0;
 }
+.calcBtn{
+  margin: 0 0.3rem;
+  padding-inline: 0.1rem;
+}
 #screen{
   font-size: 1.3rem;
   text-align: right;
-  margin: 2rem 0.8rem 0;
+  margin: 4rem 1.3rem 0.3rem;
 }
 .buttonsRowTop,
 .buttonsRow{
-  margin-inline: 0.4em;
+  margin-inline: 0.5em;
 }
 #screen,
 .buttons,
@@ -41,6 +45,7 @@ body{
   background-color: #505050;
   font-size: 0.5em;
   margin: 0.3em 0;
+  padding-inline: auto;
 }
 .buttons{
   width: 1.3rem;
@@ -52,6 +57,15 @@ body{
   text-align: left;
   padding-inline: 1em 0;
   width: 2.87rem;
+  height: 1.2rem;
+  border-radius: 3.4rem;
+  border: none;
+}
+.buttonsTriple{
+  font-size: 0.5em;
+  text-align: left;
+  padding-inline: 1em 0;
+  width: 4.43rem;
   height: 1.2rem;
   border-radius: 3.4rem;
   border: none;
